--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Radek Adamus <adamusr@gmail.com> (https://github.com/radamus/)",
   "license": "MIT",
   "dependencies": {
-    "webs-weeia": "0.0.1"
+    "webs-weeia": "0.0.2",
+    "ejs": "^1.0.0"
   }
 }
