--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "webs-weeia": "0.0.2",
-    "ejs": "^1.0.0"
+    "ejs": "^1.0.0",
+    "moment": "^2.5.1"
   }
 }
