digest calculation added

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "webs-weeia": "0.0.2",
     "ejs": "^1.0.0",
-    "moment": "^2.5.1"
+    "moment": "^2.5.1",
+    "async": "^0.2.10"
   }
 }
